--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "prepack": "husky install",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -27,6 +28,8 @@
   },
   "devDependencies": {
     "@yarnpkg/sdks": "^3.0.0-rc.47",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "rome": "^12.1.3",
     "shadcn-ui": "^0.2.3"
   }
