--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "lucide-react": "^0.257.0",
+    "lucide-static": "^0.257.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
